[package]
name = "yareio"
version = "0.1.1"
edition = "2018"
description = "Lightweight rust bindings for yare.io with plentiful documentation and helpful constants."
readme = "README.md"
repository = "https://github.com/ViliamVadocz/yare-rust"
license = "GPL-2.0-or-later"
keywords = ["yare", "yareio", "bindings", "wasm", "webassembly"]
categories = ["external-ffi-bindings", "games", "wasm"]

[lib]
name="yareio"
crate-type = ["rlib", "dylib"]


[features]
headless = ["rand", "serde", "serde_json"]

[dependencies]
rand = { version = "0.8.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[profile.release]
opt-level = "s"
lto = true
